# DD_crewai

./: agents.py  app.py  crew_callback_logs.txt  doc_conversion_test.py  due_diligence_report-converted.docx  due_diligence_report.html  fp.py  helper_functions.py  info.txt  pyproject.toml  segregated_notes.txt  streamlit_app.py  tasks.py  test_serper_api.py  tools.py
Adani Ports/: about_us_content.txt  investor_relations_content.txt  main_website_content.txt
Ambuja Cement/: https:__www.ambujacement.com_.txt  https:__www.ambujacement.com_investors_annual-reports.txt  https:__www.ambujacement.com_investors_shareholders-information_disclosures-to-the-stock-exchanges_Other-Disclosures.txt  https:__www.ambujacement.com_investors_shareholding-patterns.txt  https:__www.ambujacement.com_product-and-services.txt  https:__www.ambujacement.com_product-and-services_products.txt  https:__www.livemint.com_news_india_ambuja-cements-forms-wholly-owned-subsidiary-ambuja-shipping-services-11672811551170.html.txt  links.txt
Boat Lifestyle/: Company_Overview.txt  Shareholding_Details.txt  Success_Story.txt  main_website_info.txt  notes.txt  who_are_we_info.txt
SK Finance/: segregated_notes.txt
SK Financial/: due_diligence_report-converted.docx  due_diligence_report.html  notes.txt  sectioned_notes.txt
Tata Consultancy Services/: additional_information.txt  applicable_regulations.txt  company_overview.txt  financial_statements.txt  notes.txt
Tata Motors/: applicable_regulations.txt  investor_relations.txt  notes.txt  official_website.txt  sec_filings.txt  shareholding_details.txt
(+1 files in other folders)
